--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
 
   <body>
+<h1>Data Manipulation with JavaScript</h1>
+
     <div id="app"></div>
-    <script src="./index.js" type="module"></script>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
